5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1888_1735.log
== TEST (2019-07-09 16:02:19) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))

print(ent)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:00) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))

linh= ent.shape[1]
for i in range(size(ent)):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:09) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))

linh= ent.shape[1]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:21) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))

linh= ent.shape[1]
print(linh)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:04:43) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))

linh= ent.shape[1]
print(max(linh))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:23) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(ent):
	i= sum(ent)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:35) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent):
	i= sum(ent)
print(i)
-- ERROR:
File "XXXX", line 6
    for i in range(size(ent):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:42) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	i= sum(ent)
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:06:54) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	i= sum(ent[i])
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:08:06) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	i= 
print(linh)
-- ERROR:
File "XXXX", line 7
    i= 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:08:17) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	i= i+1
print(linh)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:32) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	a=sum(linh[0:,])
print(linh)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:38) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	a=sum(linh[0:,])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:48) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	a=sum(linh[0:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:01) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
a=0
linh= ent.shape[1]
for i in range(size(ent)):
	a=sum(linh[0,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:09) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)
for i in range(size(ent)):
	for j in range(size(ent)):
		a= sum(linh)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:21) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)
for i in range(size(ent)):
	for j in range(size(ent)):
		a= sum(linh)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:43) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)
for i in range(size(ent)):
	for j in range(size(ent)):
		a= sum(linh[i:,])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:47) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	for j in range(size(ent)):
		a= sum(linh[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:04) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	for j in range(size(ent)):
		a= sum(linh[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:13) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
		a= ent[0]+ ent[1] + ent[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:46) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
		a= ent[0]+ ent[1] + ent[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:27) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
		a= sum(ent[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:52) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
		a= ent[0]+ ent[1] + ent[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:40) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= sum(ent[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:00) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= sum(linh[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:41:19) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= sum(linh[i])
print(a)
-- EXECUTION TIME:
0.996965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1735/main.py", line 8, in <module>
    a[i]= sum(linh[i])
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:20) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= sum(linh[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:43) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)
j=0
for i in range(size(ent)):
	j= sum(linh[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:30) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= sum(ent[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:40) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	linh[i]= sum(ent[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:48) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	linh[i]= sum(ent[i])
print(linh)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:28) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[1]
a= zeros(linh, dtype=int)
p=0
for i in range(size(ent)):
	p=sum(linh[i])
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:43) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a= linh[0]+ linh[1] + linh[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:01) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(ent, dtype=int)

for i in range(size(ent)):
	a= linh[0]+ linh[1] + linh[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:52) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= linh[0]+ linh[1] + linh[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:09) 
-- CODE:
from numpy import*

ent= array(int(input("Insira:")))
linh= ent.shape[0]
a= zeros(linh, dtype=int)

for i in range(size(ent)):
	a[i]= linh[0]+ linh[1] + linh[2]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:35) 
-- CODE:
from numpy import*

ent= array(eval(input("Insira:")))

a= zeros(linh, dtype=int)

for i in range(size(ent)):
	linh=sum(shape(ent[0]))
print(linh)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
